# fluent-bit

./: .build-trigger  .clang-format  .dockerignore  .drone.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .pinact.yaml  .rebuild  .travis.yml  AGENTS.md  BUILD_FROM_SOURCE_README.md  CHANGELOG.md  CHUNKS.md  CMakeCache.txt  CMakeLists.txt  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  COMMIT_LINT.md  CONTRIBUTING.md  CONTRIBUTING_DOCS.md  CPackConfig.cmake  CPackSourceConfig.cmake  CrossCompile.cmake  DEVELOPER_GUIDE.md  Dockerfile  Dockerfile.arm  Dockerfile.debug  Dockerfile.fuzz  Dockerfile.local  Dockerfile.windows  Dockerfile.windows.devel  ENDPOINT_UPDATE_SUMMARY.md  FINAL_CONFIGURATION_SUMMARY.md  FUZZING.md  GOLANG_OUTPUT_PLUGIN.md  GOVERNANCE.md  MAINTAINERS.md  MAINTENANCE.md  (+205 more)
benchmarks/: CMakeLists.txt  bench_config.h  bench_config.h.in  flb-bench-processor_sampling.c  opentelemetry.c  pack_bench.c  pack_json.c  sample.json  utf8_surrogate_bench_10k.ndjson
examples/raw_msgpack_api/: CMakeLists.txt  README.md  raw_msgpack_api.c
include/: CMakeLists.txt  Makefile  cmake_install.cmake  fluent-bit-minimal.h  fluent-bit.h
include/fluent-bit/: flb_api.h  flb_atomic.h  flb_avro.h  flb_aws_credentials.h  flb_aws_util.h  flb_azure_auth.h  flb_base64.h  flb_bits.h  flb_blob_db.h  flb_bucket_queue.h  flb_buffer.h  flb_buffer_chunk.h  flb_buffer_qchunk.h  flb_byteswap.h  flb_callback.h  flb_cfl_ra_key.h  flb_cfl_record_accessor.h  flb_chunk_trace.h  flb_circuit_breaker.h  flb_cobj_ra_key.h  flb_cobj_record_accessor.h  flb_compat.h  flb_compression.h  flb_conditionals.h  flb_config.h  flb_config_format.h  flb_config_map.h  flb_connection.h  flb_coro.h  flb_coroutine_scheduler.h  flb_crypto.h  flb_crypto_constants.h  flb_csv.h  flb_custom.h  flb_custom_plugin.h  flb_digest.h  flb_dlfcn_win32.h  flb_downstream.h  flb_downstream_conn.h  flb_downstream_worker.h  (+174 more)
lib/cfl/: .gitignore  AGENTS.md  ARENA.md  CHANGELOG.md  CMakeLists.txt  README.md
lib/chunkio/: .gitignore  AUTHORS.md  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
lib/cjson/: CMakeLists.txt  cjson.h
lib/cmetrics/: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  appveyor.yml  create-submoduled-tarball.sh
lib/cprofiles/: .gitignore  .gitmodules  .mdlrc  CMakeLists.txt  CODEOWNERS  README.md  appveyor.yml  cprof_attribute_unit.c  cprof_decode_msgpack.c  cprof_decode_opentelemetry.c  cprof_encode_msgpack.c  cprof_encode_opentelemetry.c  cprof_instrumentation_scope.c  cprof_link.c  cprof_mpack_utils.c  cprof_opentelemetry_variant_helpers.c  cprof_profile.c  cprof_resource_profiles.c  cprof_sample.c  cprof_scope_profiles.c
lib/ctraces/: .gitignore  CMakeLists.txt  README.md  appveyor.yml  markdownlint.rb
lib/flb_libco/: CMakeCache.txt  CMakeLists.txt  Makefile  aarch64.c  amd64.c  arm.c  cmake_install.cmake  emscripten_fiber.c  fiber.c  libco.c  libco.h  ppc.c  ppc64le.c  ppc64v2.c  settings.h  sjlj.c  x86.c
lib/fluent-otel-proto/: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/libsomeip-c/: CMakeLists.txt
lib/libxbee-v3/: CMakeLists.txt  README  conn.c  conn.h  error.c  frame.c  frame.h  internal.h  ll.c  ll.h  makefile  mode.c  mutex.c  net_callbacks.c  net_handlers.c  net_handlers.h  net_io.c  net_io.h  pkt.c  rx.h  thread.h  tx.h  xbee.c  xbee.h  xbee_int.h  xbeep.cpp  xbeep.h  xsys_linux.c  xsys_linux.h
lib/luajit-cmake/: Bundle.cmake  CMakeLists.txt  LICENSE  LuaJIT.cmake  Makefile  ffi.cmake  lua.cmake  lua2c.lua  luauser.h  readme.md
lib/lwrb/: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  FLB_GIT_VERSION  LICENSE  README.md  library.json
lib/miniz/: CMakeLists.txt  ChangeLog.md  Config.cmake.in  Makefile  VERSION.md  amalgamate.sh  cmake_install.cmake  meson.build  miniz.c  miniz.h  miniz.pc.in  miniz_common.h  miniz_tdef.c  miniz_tdef.h  miniz_tinfl.c  miniz_tinfl.h  miniz_zip.c  miniz_zip.h  test.sh
lib/monkey/: .gitignore  .travis.yml  AGENTS.md  ARDUINO_YUN.md  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  DRAFT_v1.6_Announcement.md  FUZZ.md  INSTALL  NOTICE  README.md  configure  monkey.spec  systemd.in
lib/msgpack-0.5.9/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README.md  configure  configure.in  msgpack_vc8.vcproj
lib/msgpack-1.1.0/: CMakeLists.txt  Makefile.in  README  README.md  config.h.in  configure  configure.in  msgpack_vc.postbuild.bat
lib/msgpack-1.2.0/: CMakeLists.txt  Makefile.am  Makefile.in  NOTICE  README  aclocal.m4  config.h.in  configure  configure.in
lib/msgpack-3.2.0/: CMakeLists.txt  ChangeLog  Doxyfile  Files.cmake  Makefile  README  cmake_install.cmake  msgpack-config-version.cmake  msgpack-config.cmake  msgpack-targets.cmake  msgpack.pc  msgpack_vc8.vcproj
lib/msgpack-c-068041f/: .gitignore  .gitmodules  (+11 more)
plugins/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
src/: CMakeLists.txt  Makefile  cmake_install.cmake  flb_api.c  flb_avro.c  flb_azure_auth.c  flb_base64.c  flb_blob_db.c  flb_buffer.c  flb_buffer_chunk.c  flb_buffer_qchunk.c  flb_callback.c  flb_cfl_ra_key.c  flb_cfl_record_accessor.c  flb_checksum.c  flb_chunk_trace.c  flb_circuit_breaker.c  flb_cobj.c  flb_cobj_ra_key.c  flb_cobj_record_accessor.c  flb_compression.c  flb_conditionals.c  flb_config.c  flb_config_map.c  flb_config_static.c  flb_connection.c  flb_coro.c  flb_coroutine_scheduler.c  flb_crypto.c  flb_csv.c  flb_custom.c  flb_digest.c  flb_dlfcn_win32.c  flb_downstream.c  flb_downstream_worker.c  flb_dump.c  flb_encode.c  flb_encoder.c  flb_encoding.c  flb_engine.c  (+140 more)
tests/: CMakeLists.txt  flb_data.h  flb_lib_push.cpp  flb_lib_stdout.cpp  flb_test_elasticsearch.cpp  flb_test_engine.cpp  flb_test_exit.cpp  flb_test_file.cpp  flb_test_filter_grep.cpp  flb_test_fluentd.cpp  flb_test_in_cpu.cpp  flb_test_in_dummy.cpp  flb_test_in_mem.cpp  flb_test_in_proc.cpp  flb_test_in_random.cpp  flb_test_plot.cpp  flb_test_retry.cpp  flb_test_stdout.cpp  flb_test_td.cpp  gen_data.py  internalflb_tests_internal.h  test-processor-calyptia.sh
(+17929 files in other folders)
